Reorganizing ATV patches for TweakScale (easier maintenance)

--- a/GameData/Knes/Compatibility/Tweakscale/Knes-MultiRoleKapsule_TweakScale.cfg
+++ b/GameData/Knes/Compatibility/Tweakscale/Knes-MultiRoleKapsule_TweakScale.cfg
@@ -14,6 +14,29 @@
 // ** Knes :: Multi Role Kapsule **
 //
 
+// ** Cargo **
+
+@PART[_Knes_mrk_Cargo]:NEEDS[TweakScale]:FOR[Knes] // Multi-Role Cargo Kapsule DM
+{
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 2.5
+	}
+}
+
+
+// ** Communication **
+
+new @PART[_Knes_Hermes_Antenna]:NEEDS[TweakScale]:FOR[Knes] // MRK-5b Antenna
+{
+	%MODULE[TweakScale]
+	{
+		type = stack_square
+		defaultScale = 0.625
+	}
+}
+
 @PART[_Knes_mrk_Antenna]:NEEDS[TweakScale]:FOR[Knes] // MRK-5a Antenna
 {
 	%MODULE[TweakScale]
@@ -22,6 +45,9 @@
 		defaultScale = 0.625
 	}
 }
+
+
+// ** Coupling **
 
 @PART[_Knes_mrk_Decoupler]:NEEDS[TweakScale]:FOR[Knes] // MRK-4d Decoupler
 {
@@ -51,41 +77,66 @@
 	}
 }
 
-@PART[_Knes_mrk_HeatSheild]:NEEDS[TweakScale]:FOR[Knes] // MRK-2b Heatshield 
+
+// ** Electrical **
+
+@PART[_Knes_Hermes_SolarPanel]:NEEDS[TweakScale]:FOR[Knes] // Callisto Solar Panel
 {
 	%MODULE[TweakScale]
 	{
 		type = stack_square
-		defaultScale = 2.5
+		defaultScale = 0.625
 	}
 }
 
-@PART[_Knes_mrk_LES]:NEEDS[TweakScale]:FOR[Knes] // MRK Launch Escape System
+@PART[_Knes_mrk_SolarArray]:NEEDS[TweakScale]:FOR[Knes] // MRK-30a Solar Array
 {
-	#@TWEAKSCALEBEHAVIOR[SRB]/MODULE[TweakScale] { }
 	%MODULE[TweakScale]
 	{
-		type = stack
-		defaultScale = 1.25
+		type = stack_square
+		defaultScale = 0.625
 	}
 }
 
-@PART[_Knes_mrk_Parachute]:NEEDS[TweakScale]:FOR[Knes] // MRK-1c Parachute
+@PART[_Knes_mrk_SolarPanel]:NEEDS[TweakScale]:FOR[Knes] // MRK-3a Solar Panel
 {
 	%MODULE[TweakScale]
 	{
-		type = free_square
+		type = stack_square
+		defaultScale = 0.625
 	}
 }
 
-@PART[_Knes_mrk_Cargo]:NEEDS[TweakScale]:FOR[Knes] // Multi-Role Cargo Kapsule DM
+
+@PART[_Knes_mrk_SolarPanel_Nano]:NEEDS[TweakScale]:FOR[Knes] // MRK-1A Solar Panel
 {
 	%MODULE[TweakScale]
 	{
-		type = stack
-		defaultScale = 2.5
+		type = stack_square
+		defaultScale = 0.625
 	}
 }
+
+@PART[_Knes_mrk_SolarPanel_Pyld]:NEEDS[TweakScale]:FOR[Knes] // MRK-3b Solar Panel
+{
+	%MODULE[TweakScale]
+	{
+		type = stack_square
+		defaultScale = 0.625
+	}
+}
+
+@PART[_Knes_mrk_SolarPanel_Pyld_Track]:NEEDS[TweakScale]:FOR[Knes] // MRK-3c Solar Panel
+{
+	%MODULE[TweakScale]
+	{
+		type = stack_square
+		defaultScale = 0.625
+	}
+}
+
+
+// ** Pods **
 
 @PART[_Knes_mrk_Pod]:NEEDS[TweakScale]:FOR[Knes] // Multi-Role Kapsule DM
 {
@@ -102,6 +153,38 @@
 	{
 		type = stack_square
 		defaultScale = 2.5
+	}
+}
+
+// ** Thermal **
+
+@PART[_Knes_mrk_HeatSheild]:NEEDS[TweakScale]:FOR[Knes] // MRK-2b Heatshield
+{
+	%MODULE[TweakScale]
+	{
+		type = stack_square
+		defaultScale = 2.5
+	}
+}
+
+
+// ** Utility **
+
+@PART[_Knes_mrk_LES]:NEEDS[TweakScale]:FOR[Knes] // MRK Launch Escape System
+{
+	#@TWEAKSCALEBEHAVIOR[SRB]/MODULE[TweakScale] { }
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 1.25
+	}
+}
+
+@PART[_Knes_mrk_Parachute]:NEEDS[TweakScale]:FOR[Knes] // MRK-1c Parachute
+{
+	%MODULE[TweakScale]
+	{
+		type = free_square
 	}
 }
 
@@ -132,69 +215,5 @@
 	{
 		type = stack
 		defaultScale = 2.5
-	}
-}
-
-@PART[_Knes_mrk_SolarArray]:NEEDS[TweakScale]:FOR[Knes] // MRK-30a Solar Array
-{
-	%MODULE[TweakScale]
-	{
-		type = stack_square
-		defaultScale = 0.625
-	}
-}
-
-@PART[_Knes_mrk_SolarPanel]:NEEDS[TweakScale]:FOR[Knes] // MRK-3a Solar Panel
-{
-	%MODULE[TweakScale]
-	{
-		type = stack_square
-		defaultScale = 0.625
-	}
-}
-
-@PART[_Knes_mrk_SolarPanel_Nano]:NEEDS[TweakScale]:FOR[Knes] // MRK-1A Solar Panel
-{
-	%MODULE[TweakScale]
-	{
-		type = stack_square
-		defaultScale = 0.625
-	}
-}
-
-@PART[_Knes_mrk_SolarPanel_Pyld]:NEEDS[TweakScale]:FOR[Knes] // MRK-3b Solar Panel
-{
-	%MODULE[TweakScale]
-	{
-		type = stack_square
-		defaultScale = 0.625
-	}
-}
-
-@PART[_Knes_mrk_SolarPanel_Pyld_Track]:NEEDS[TweakScale]:FOR[Knes] // MRK-3c Solar Panel
-{
-	%MODULE[TweakScale]
-	{
-		type = stack_square
-		defaultScale = 0.625
-	}
-}
-
-@PART[_Knes_Hermes_SolarPanel]:NEEDS[TweakScale]:FOR[Knes] // Callisto Solar Panel
-{
-	%MODULE[TweakScale]
-	{
-		type = stack_square
-		defaultScale = 0.625
-	}
-}
-
-@PART[_Knes_mrk_Thruster]:NEEDS[TweakScale]:FOR[Knes] // MRK-6f Thruster
-{
-	#@TWEAKSCALEBEHAVIOR[Engine]/MODULE[TweakScale] { }
-	%MODULE[TweakScale]
-	{
-		type = stack
-		defaultScale = 0.625
 	}
 }
