TweakScale patches for the new Multi Role Kapsule parts

--- a/GameData/Knes/Compatibility/Tweakscale/Knes-MultiRoleKapsule_TweakScale.cfg
+++ b/GameData/Knes/Compatibility/Tweakscale/Knes-MultiRoleKapsule_TweakScale.cfg
@@ -14,18 +14,6 @@
 // ** Knes :: Multi Role Kapsule **
 //
 
-// ** Cargo **
-
-@PART[_Knes_mrk_Cargo]:NEEDS[TweakScale]:FOR[Knes] // Multi-Role Cargo Kapsule DM
-{
-	%MODULE[TweakScale]
-	{
-		type = stack
-		defaultScale = 2.5
-	}
-}
-
-
 // ** Communication **
 
 new @PART[_Knes_Hermes_Antenna]:NEEDS[TweakScale]:FOR[Knes] // MRK-5b Antenna
@@ -136,25 +124,18 @@ new @PART[_Knes_Hermes_Antenna]:NEEDS[TweakScale]:FOR[Knes] // MRK-5b Antenna
 }
 
 
-// ** Pods **
+// ** Engine **
 
-@PART[_Knes_mrk_Pod]:NEEDS[TweakScale]:FOR[Knes] // Multi-Role Kapsule DM
+@PART[_Knes_mrk_Thruster]:NEEDS[TweakScale]:FOR[Knes] // MRK-6f Thruster
 {
+	#@TWEAKSCALEBEHAVIOR[Engine]/MODULE[TweakScale] { }
 	%MODULE[TweakScale]
 	{
-		type = stack_square
-		defaultScale = 2.5
+		type = stack
+		defaultScale = 0.625
 	}
 }
 
-@PART[_Knes_mrk_Pod_Rescue]:NEEDS[TweakScale]:FOR[Knes] // Multi-Role Kapsule DM (Recovery)
-{
-	%MODULE[TweakScale]
-	{
-		type = stack_square
-		defaultScale = 2.5
-	}
-}
 
 // ** Thermal **
 
