--- a/GameData/Knes/Compatibility/Tweakscale/Knes-Spacecraft_TweakScale.cfg
+++ b/GameData/Knes/Compatibility/Tweakscale/Knes-Spacecraft_TweakScale.cfg
@@ -14,16 +14,106 @@
 // ** Knes :: Spacecraft **
 //
 
-@PART[Knes_Cargo_Pod_09375]:NEEDS[TweakScale]:FOR[Knes] // Cargo Pod "Minotaur"
+// ** Aero **
+
+@PART[Knes_Airbrake]:NEEDS[TweakScale]:FOR[Knes] // Airbrake for Hermes Space Shuttle
 {
 	%MODULE[TweakScale]
 	{
-		type = stack_square
+		type = free_square
+	}
+}
+
+@PART[Knes_Hermes_AileronC]:NEEDS[TweakScale]:FOR[Knes] // Hermes Aileron C
+{
+	%MODULE[TweakScale]
+	{
+		type = free_square
+	}
+}
+
+@PART[Knes_Hermes_AileronL]:NEEDS[TweakScale]:FOR[Knes] // Hermes Aileron Right
+{
+	%MODULE[TweakScale]
+	{
+		type = free_square
+	}
+}
+
+@PART[Knes_Hermes_AileronR]:NEEDS[TweakScale]:FOR[Knes] // Hermes Aileron Left
+{
+	%MODULE[TweakScale]
+	{
+		type = free_square
+	}
+}
+
+@PART[Knes_Hermes_RudderL]:NEEDS[TweakScale]:FOR[Knes] // Hermes Rudder Left
+{
+	%MODULE[TweakScale]
+	{
+		type = free_square
+	}
+}
+
+@PART[Knes_Hermes_RudderR]:NEEDS[TweakScale]:FOR[Knes] // Hermes Rudder Right
+{
+	%MODULE[TweakScale]
+	{
+		type = free_square
+	}
+}
+
+@PART[_Knes_French_Hermes_Elevon]:NEEDS[TweakScale]:FOR[Knes] // Callisto Space Shuttle Elevon
+{
+	%MODULE[TweakScale]
+	{
+		type = free_square
+	}
+}
+
+@PART[_Knes_French_Hermes_Rudder]:NEEDS[TweakScale]:FOR[Knes] // Callisto Space Shuttle Rudder
+{
+	%MODULE[TweakScale]
+	{
+		type = free_square
+	}
+}
+
+@PART[_Knes_French_Hermes_Wings]:NEEDS[TweakScale]:FOR[Knes] // Callisto Space Shuttle Wings
+{
+	%MODULE[TweakScale]
+	{
+		type = free_square
+	}
+}
+
+
+// ** Coupling **
+
+@PART[Knes_Hera_Grapple]:NEEDS[TweakScale]:FOR[Knes] // Hera Grapple Robotic Arm
+{
+	%MODULE[TweakScale]
+	{
+		type = stack
 		defaultScale = 1.25
 	}
 }
 
-@PART[_Knes_Control_LowProfile_RCS_0625]:NEEDS[TweakScale]:FOR[Knes] // RCS "Hachimaki" Control Unit
+@PART[_Knes_French_Hermes_Adapter_s1875]:NEEDS[TweakScale]:FOR[Knes] // Callisto Adapter for 1.875 Rocket
+{
+	#@TWEAKSCALEBEHAVIOR[Decoupler]/MODULE[TweakScale] { }
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 1.875
+	}
+}
+
+
+// ** Engine **
+
+@PART[_French_Hermes_OME_Engine]:NEEDS[TweakScale]:FOR[Knes] // Callisto "OME" Monoprop Engine
 {
 	#@TWEAKSCALEBEHAVIOR[Engine]/MODULE[TweakScale] { }
 	%MODULE[TweakScale]
@@ -33,178 +123,113 @@
 	}
 }
 
-@PART[Knes_Crew_Pod_09375]:NEEDS[TweakScale]:FOR[Knes] // Command Pod "Viking"
-{
-	%MODULE[TweakScale]
-	{
-		type = stack_square
-		defaultScale = 1.25
-	}
-}
 
-@PART[Knes_DockingPortJr_0625]:NEEDS[TweakScale]:FOR[Knes] // K06 "Arcas" Docking Port Jr
-{
-	%MODULE[TweakScale]
-	{
-		type = stack
-		defaultScale = 0.625
-	}
-}
+// ** Ground **
 
-@PART[Knes_EscapeTower_Small]:NEEDS[TweakScale]:FOR[Knes] // Launch Escape System "LastChance"
+@PART[Knes_Hermes_Gear]:NEEDS[TweakScale]:FOR[Knes] // LH-35 Hermes Landing Gear
 {
-	#@TWEAKSCALEBEHAVIOR[SRB]/MODULE[TweakScale] { }
-	%MODULE[TweakScale]
-	{
-		type = stack
-		defaultScale = 1.25
-	}
-}
-
-@PART[Knes_Heatshield_09375]:NEEDS[TweakScale]:FOR[Knes] // Heatshield "Turtle"
-{
-	%MODULE[TweakScale]
-	{
-		type = stack_square
-		defaultScale = 0.9375
-	}
-}
-
-@PART[Knes_MonoProp_Engine_srf]:NEEDS[TweakScale]:FOR[Knes] // Monoprop Engine "Youri"
-{
-	#@TWEAKSCALEBEHAVIOR[Engine]/MODULE[TweakScale] { }
 	%MODULE[TweakScale]
 	{
 		type = free
 	}
 }
 
-@PART[Knes_MonoProp_FuelTank_Medium_09375]:NEEDS[TweakScale]:FOR[Knes] // CL-R15 RCS Fuel Tank
-{
-	%MODULE[TweakScale]
-	{
-		type = stack
-		defaultScale = 0.9375
-	}
-}
 
-@PART[Knes_MonoProp_FuelTank_Nano_09375]:NEEDS[TweakScale]:FOR[Knes] // CL-R10 RCS Fuel Tank
-{
-	%MODULE[TweakScale]
-	{
-		type = stack
-		defaultScale = 0.9375
-	}
-}
+// ** Pods **
 
-@PART[Knes_Parachute_Inline_0625]:NEEDS[TweakScale]:FOR[Knes] // Inline Parachute "Uncertain"
+@PART[Knes_Hermes]:NEEDS[TweakScale]:FOR[Knes] // Hermes Space Shuttle
 {
-	%MODULE[TweakScale]
-	{
-		type = stack_square
-		defaultScale = 0.625
-	}
-}
-
-@PART[Knes_Service_Module_Viking_09375]:NEEDS[TweakScale]:FOR[Knes] // C-09 "Viking" Service Module
-{
-	#@TWEAKSCALEBEHAVIOR[Engine]/MODULE[TweakScale] { }
-	%MODULE[TweakScale]
-	{
-		type = stack
-		defaultScale = 0.9375
-	}
-}
-
-@PART[_Knes_Station_Module_CrystalFactory]:NEEDS[TweakScale]:FOR[Knes] // Crystallisation Facility Module "Eternity"
-{
+	// It's a crew cabin, an engine and a decoupler
 	#@TWEAKSCALEBEHAVIOR[ModuleGeneratorExtended]/MODULE[TweakScale] { }
-	%MODULE[TweakScale]
-	{
-		type = stack
-		defaultScale = 1.25
-	}
-}
-
-@PART[_Knes_Station_Module_EndCap_0625]:NEEDS[TweakScale]:FOR[Knes] // Adapter K-0625 "Inori"
-{
-	%MODULE[TweakScale]
-	{
-		type = stack
-		defaultScale = 2.5
-	}
-}
-
-@PART[_Knes_Station_Module_EndCap_09375]:NEEDS[TweakScale]:FOR[Knes] // Adapter K-09375 "Betsy"
-{
-	%MODULE[TweakScale]
-	{
-		type = stack
-		defaultScale = 2.5
-	}
-}
-
-@PART[_Knes_Station_Module_Hab]:NEEDS[TweakScale]:FOR[Knes] // Habitation Module "Homelike"
-{
-	%MODULE[TweakScale]
-	{
-		type = stack_square
-		defaultScale = 1.25
-	}
-}
-
-@PART[_Knes_Station_Module_ScienceLab]:NEEDS[TweakScale]:FOR[Knes] // Science Module "Busy"
-{
-	%MODULE[TweakScale]
-	{
-		type = stack_square
-		defaultScale = 1.25
-	}
-}
-
-@PART[_Knes_Structural_Adapter_09375_0625]:NEEDS[TweakScale]:FOR[Knes] // Adapter 0.625 0.9375 "Zoe"
-{
-	%MODULE[TweakScale]
-	{
-		type = stack
-		defaultScale = 2.5
-	}
-}
-
-@PART[_Knes_Structural_Adapter_125_09375]:NEEDS[TweakScale]:FOR[Knes] // Adapter K-0125 "Caroline"
-{
-	%MODULE[TweakScale]
-	{
-		type = stack
-		defaultScale = 2.5
-	}
-}
-
-@PART[_Knes_Structural_EndCap_0625]:NEEDS[TweakScale]:FOR[Knes] // K0625 "Pingu" EndCap
-{
-	%MODULE[TweakScale]
-	{
-		type = stack
-		defaultScale = 0.625
-	}
-}
-
-@PART[_Knes_Structural_Node_0625]:NEEDS[TweakScale]:FOR[Knes] // K0625 "Together" Node
-{
-	%MODULE[TweakScale]
-	{
-		type = stack
-		defaultScale = 0.625
-	}
-}
-
-@PART[_Knes_Utility_Adapter_09375_0625]:NEEDS[TweakScale]:FOR[Knes] // L-07 "Racoon" Service Module
-{
 	#@TWEAKSCALEBEHAVIOR[Engine]/MODULE[TweakScale] { }
 	%MODULE[TweakScale]
 	{
-		type = stack
-		defaultScale = 2.5
+		type = stack_square
+		defaultScale = 1.25
 	}
 }
+
+@PART[_Knes_French_Hermes]:NEEDS[TweakScale]:FOR[Knes] // Callisto Space Shuttle
+{
+	// It's also a crew cabin, an engine, a generator and a decoupler!
+	#@TWEAKSCALEBEHAVIOR[ModuleGeneratorExtended]/MODULE[TweakScale] { }
+	#@TWEAKSCALEBEHAVIOR[Decoupler]/MODULE[TweakScale] { }
+	#@TWEAKSCALEBEHAVIOR[Engine]/MODULE[TweakScale] { }
+	%MODULE[TweakScale]
+	{
+		type = stack_square
+		defaultScale = 1.25
+	}
+}
+
+
+// ** Structural **
+
+@PART[_Knes_French_Hermes_Structural_Dock]:NEEDS[TweakScale]:FOR[Knes] // Callisto Structural Dock
+{
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 1.25
+	}
+}
+
+@PART[_Knes_French_Hermes_Structural_Platform]:NEEDS[TweakScale]:FOR[Knes] // Callisto Structural Platform
+{
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 1.25
+	}
+}
+
+@PART[_Knes_Hermes_Adapter]:NEEDS[TweakScale]:FOR[Knes] // Hermes Adapter
+{
+	#@TWEAKSCALEBEHAVIOR[Decoupler]/MODULE[TweakScale] { }
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 1.875
+	}
+}
+
+
+// ** Utility **
+
+@PART[Knes_Hermes_HRM]:NEEDS[TweakScale]:FOR[Knes] // Hermes HRM
+{
+	// This is an engine and a decoupler!
+	#@TWEAKSCALEBEHAVIOR[Decoupler]/MODULE[TweakScale] { }
+	#@TWEAKSCALEBEHAVIOR[Engine]/MODULE[TweakScale] { }
+	%MODULE[TweakScale]
+	{
+		type = stack_square
+		defaultScale = 3.75
+	}
+}
+
+@PART[_Knes_French_Hermes_Crew_Module]:NEEDS[TweakScale]:FOR[Knes] // Callisto Crew Module
+{
+	%MODULE[TweakScale]
+	{
+		type = stack_square
+		defaultScale = 1.25
+	}
+}
+
+@PART[_Knes_French_Hermes_Docking_Module]:NEEDS[TweakScale]:FOR[Knes] // Callisto Docking Module
+{
+	#@TWEAKSCALEBEHAVIOR[Decoupler]/MODULE[TweakScale] { }
+	%MODULE[TweakScale]
+	{
+		type = stack_square     // It have crew!
+		defaultScale = 1.25
+	}
+}
+
+
+
+
+
+
 
