--- a/GameData/Knes/Compatibility/Tweakscale/Knes-SpacePlane_TweakScale.cfg
+++ b/GameData/Knes/Compatibility/Tweakscale/Knes-SpacePlane_TweakScale.cfg
@@ -14,147 +14,21 @@
 // ** Knes :: Space Plane **
 //
 
-// ** European Hermes **
+// ** Cargo **
 
-@PART[Knes_Airbrake]:NEEDS[TweakScale]:FOR[Knes] // Airbrake for Hermes Space Shuttle
+@PART[Knes_Cargo_Pod_09375]:NEEDS[TweakScale]:FOR[Knes] // Cargo Pod "Minotaur"
 {
 	%MODULE[TweakScale]
 	{
-		type = free_square
-	}
-}
-
-@PART[Knes_Hera_Grapple]:NEEDS[TweakScale]:FOR[Knes] // Hera Grapple Robotic Arm
-{
-	%MODULE[TweakScale]
-	{
-		type = stack
+		type = stack_square
 		defaultScale = 1.25
 	}
 }
 
-@PART[Knes_Hermes]:NEEDS[TweakScale]:FOR[Knes] // Hermes Space Shuttle
-{
-	#@TWEAKSCALEBEHAVIOR[Engine]/MODULE[TweakScale] { }
-	%MODULE[TweakScale]
-	{
-		type = stack
-		defaultScale = 1.25
-	}
-}
 
-@PART[_Knes_Hermes_Adapter]:NEEDS[TweakScale]:FOR[Knes] // Hermes Adapter
-{
-	#@TWEAKSCALEBEHAVIOR[Decoupler]/MODULE[TweakScale] { }
-	%MODULE[TweakScale]
-	{
-		type = stack
-		defaultScale = 1.875
-	}
-}
+// ** Control **
 
-@PART[Knes_Hermes_AileronC]:NEEDS[TweakScale]:FOR[Knes] // Aileron for Hermes Space Shuttle
-{
-	%MODULE[TweakScale]
-	{
-		type = free_square
-	}
-}
-
-@PART[Knes_Hermes_AileronL]:NEEDS[TweakScale]:FOR[Knes] // Aileron for Hermes Space Shuttle
-{
-	%MODULE[TweakScale]
-	{
-		type = free_square
-	}
-}
-
-@PART[Knes_Hermes_AileronR]:NEEDS[TweakScale]:FOR[Knes] // Aileron for Hermes Space Shuttle
-{
-	%MODULE[TweakScale]
-	{
-		type = free_square
-	}
-}
-
-@PART[Knes_Hermes_Gear]:NEEDS[TweakScale]:FOR[Knes] // LH-35 Hermes Landing Gear
-{
-	%MODULE[TweakScale]
-	{
-		type = free
-	}
-}
-
-@PART[Knes_Hermes_HRM]:NEEDS[TweakScale]:FOR[Knes] // Hermes Resource Module HRM
-{
-	#@TWEAKSCALEBEHAVIOR[Engine]/MODULE[TweakScale] { }
-	%MODULE[TweakScale]
-	{
-		type = stack
-		defaultScale = 3.75
-	}
-}
-
-@PART[Knes_Hermes_RudderL]:NEEDS[TweakScale]:FOR[Knes] // Rudder for Hermes Space Shuttle
-{
-	%MODULE[TweakScale]
-	{
-		type = free_scale
-	}
-}
-
-@PART[Knes_Hermes_RudderR]:NEEDS[TweakScale]:FOR[Knes] // Rudder for Hermes Space Shuttle
-{
-	%MODULE[TweakScale]
-	{
-		type = free_scale
-	}
-}
-
-
-// ** French Hermes **
-
-// ** Aero **
-
-@PART[_Knes_French_Hermes_Elevon]:NEEDS[TweakScale]:FOR[Knes] // Callisto Space Shuttle Elevon
-{
-	%MODULE[TweakScale]
-	{
-		type = free_square
-	}
-}
-
-@PART[_Knes_French_Hermes_Rudder]:NEEDS[TweakScale]:FOR[Knes] // Callisto Space Shuttle Rudder
-{
-	%MODULE[TweakScale]
-	{
-		type = free_square
-	}
-}
-
-@PART[_Knes_French_Hermes_Wings]:NEEDS[TweakScale]:FOR[Knes] // Callisto Space Shuttle Wings
-{
-	%MODULE[TweakScale]
-	{
-		type = free_square
-	}
-}
-
-// ** Coupling **
-
-@PART[_Knes_French_Hermes_Adapter_s1875]:NEEDS[TweakScale]:FOR[Knes] // Callisto Adapter for 1.875 Rocket
-{
-	#@TWEAKSCALEBEHAVIOR[Decoupler]/MODULE[TweakScale] { }
-	%MODULE[TweakScale]
-	{
-		type = stack
-		defaultScale = 1.875
-	}
-}
-
-// ** Engine **
-
-@PART[_French_Hermes_OME_Engine]:NEEDS[TweakScale]:FOR[Knes] // Callisto "OME" Monoprop Engine
+@PART[_Knes_Control_LowProfile_RCS_0625]:NEEDS[TweakScale]:FOR[Knes] // RCS "Hachimaki" Control Unit
 {
 	#@TWEAKSCALEBEHAVIOR[Engine]/MODULE[TweakScale] { }
 	%MODULE[TweakScale]
@@ -164,9 +38,55 @@
 	}
 }
 
+
+// ** Coupling **
+
+@PART[Knes_DockingPortJr_0625]:NEEDS[TweakScale]:FOR[Knes] // K06 "Arcas" Docking Port Jr
+{
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 0.625
+	}
+}
+
+
+// ** Engine **
+
+@PART[Knes_MonoProp_Engine_srf]:NEEDS[TweakScale]:FOR[Knes] // Monoprop Engine "Youri"
+{
+	#@TWEAKSCALEBEHAVIOR[Engine]/MODULE[TweakScale] { }
+	%MODULE[TweakScale]
+	{
+		type = free
+	}
+}
+
+
+// ** FuelTank **
+
+@PART[Knes_MonoProp_FuelTank_Medium_09375]:NEEDS[TweakScale]:FOR[Knes] // CL-R15 RCS Fuel Tank
+{
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 0.9375
+	}
+}
+
+@PART[Knes_MonoProp_FuelTank_Nano_09375]:NEEDS[TweakScale]:FOR[Knes] // CL-R10 RCS Fuel Tank
+{
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 0.9375
+	}
+}
+
+
 // ** Pods **
 
-@PART[_Knes_French_Hermes]:NEEDS[TweakScale]:FOR[Knes] // Callisto Space Shuttle
+@PART[Knes_Crew_Pod_09375]:NEEDS[TweakScale]:FOR[Knes] // Command Pod "Viking"
 {
 	%MODULE[TweakScale]
 	{
@@ -175,10 +95,116 @@
 	}
 }
 
+
+// ** Propulsion **
+
+@PART[Knes_Service_Module_Viking_09375]:NEEDS[TweakScale]:FOR[Knes] // C-09 "Viking" Service Module
+{
+	#@TWEAKSCALEBEHAVIOR[Engine]/MODULE[TweakScale] { }
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 0.9375
+	}
+}
+
+@PART[_Knes_Utility_Adapter_09375_0625]:NEEDS[TweakScale]:FOR[Knes] // L-07 "Racoon" Service Module
+{
+	#@TWEAKSCALEBEHAVIOR[Engine]/MODULE[TweakScale] { }
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 2.5
+	}
+}
+
+
+// ** Science **
+
+@PART[_Knes_Station_Module_ScienceLab]:NEEDS[TweakScale]:FOR[Knes] // Science Module "Busy"
+{
+	%MODULE[TweakScale]
+	{
+		type = stack_square
+		defaultScale = 1.25
+	}
+}
+
+
 // ** Structural **
 
-@PART[_Knes_French_Hermes_Structural_Dock]:NEEDS[TweakScale]:FOR[Knes] // Callisto Structural Dock
+@PART[_Knes_Station_Module_EndCap_0625]:NEEDS[TweakScale]:FOR[Knes] // Adapter K-0625 "Inori"
 {
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 2.5
+	}
+}
+
+@PART[_Knes_Station_Module_EndCap_09375]:NEEDS[TweakScale]:FOR[Knes] // Adapter K-09375 "Betsy"
+{
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 2.5
+	}
+}
+
+@PART[_Knes_Structural_Adapter_09375_0625]:NEEDS[TweakScale]:FOR[Knes] // Adapter 0.625 0.9375 "Zoe"
+{
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 2.5
+	}
+}
+
+@PART[_Knes_Structural_Adapter_125_09375]:NEEDS[TweakScale]:FOR[Knes] // Adapter K-0125 "Caroline"
+{
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 2.5
+	}
+}
+
+@PART[_Knes_Structural_EndCap_0625]:NEEDS[TweakScale]:FOR[Knes] // K0625 "Pingu" EndCap
+{
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 0.625
+	}
+}
+
+@PART[_Knes_Structural_Node_0625]:NEEDS[TweakScale]:FOR[Knes] // K0625 "Together" Node
+{
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 0.625
+	}
+}
+
+
+// ** Thermal **
+
+@PART[Knes_Heatshield_09375]:NEEDS[TweakScale]:FOR[Knes] // Heatshield "Turtle"
+{
+	%MODULE[TweakScale]
+	{
+		type = stack_square
+		defaultScale = 0.9375
+	}
+}
+
+
+// ** Utility **
+
+@PART[Knes_EscapeTower_Small]:NEEDS[TweakScale]:FOR[Knes] // Launch Escape System "LastChance"
+{
+	#@TWEAKSCALEBEHAVIOR[SRB]/MODULE[TweakScale] { }
 	%MODULE[TweakScale]
 	{
 		type = stack
@@ -186,18 +212,26 @@
 	}
 }
 
-// ** Utility **
-
-@PART[_Knes_French_Hermes_Docking_Module]:NEEDS[TweakScale]:FOR[Knes] // Callisto Docking Module
+@PART[Knes_Parachute_Inline_0625]:NEEDS[TweakScale]:FOR[Knes] // Inline Parachute "Uncertain"
 {
 	%MODULE[TweakScale]
 	{
-		type = stack_square     // It have crew!
+		type = stack_square
+		defaultScale = 0.625
+	}
+}
+
+@PART[_Knes_Station_Module_CrystalFactory]:NEEDS[TweakScale]:FOR[Knes] // Crystallisation Facility Module "Eternity"
+{
+	#@TWEAKSCALEBEHAVIOR[ModuleGeneratorExtended]/MODULE[TweakScale] { }
+	%MODULE[TweakScale]
+	{
+		type = stack
 		defaultScale = 1.25
 	}
 }
 
-@PART[_Knes_French_Hermes_Crew_Module]:NEEDS[TweakScale]:FOR[Knes] // Callisto Crew Module
+@PART[_Knes_Station_Module_Hab]:NEEDS[TweakScale]:FOR[Knes] // Habitation Module "Homelike"
 {
 	%MODULE[TweakScale]
 	{
@@ -205,5 +239,3 @@
 		defaultScale = 1.25
 	}
 }
-
-
