TweakScale patches for the new Space Plane parts

--- a/GameData/Knes/Compatibility/Tweakscale/Knes-SpacePlane_TweakScale.cfg
+++ b/GameData/Knes/Compatibility/Tweakscale/Knes-SpacePlane_TweakScale.cfg
@@ -151,6 +151,15 @@
 	}
 }
 
+@PART[_Knes_Station_Module_EndCap_Small_0625]:NEEDS[TweakScale]:FOR[Knes] // Adapter KB-0625 "Maia"
+{
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 0.625
+	}
+}
+
 @PART[_Knes_Structural_Adapter_09375_0625]:NEEDS[TweakScale]:FOR[Knes] // Adapter 0.625 0.9375 "Zoe"
 {
 	%MODULE[TweakScale]
@@ -184,6 +193,15 @@
 	{
 		type = stack
 		defaultScale = 0.625
+	}
+}
+
+@PART[_Knes_Structural_Short_Adapter_09375_0625]:NEEDS[TweakScale]:FOR[Knes] // Adapter Flat 0.625 0.9375 "Chloé"
+{
+	%MODULE[TweakScale]
+	{
+		type = ?
+		defaultScale = 0.9375
 	}
 }
 
