Fixing a mistake on file handling

--- a/GameData/Knes/Compatibility/Tweakscale/Knes-Spacecraft_TweakScale.cfg
+++ b/GameData/Knes/Compatibility/Tweakscale/Knes-Spacecraft_TweakScale.cfg
@@ -14,106 +14,21 @@
 // ** Knes :: Spacecraft **
 //
 
-// ** Aero **
+// ** Cargo **
 
-@PART[Knes_Airbrake]:NEEDS[TweakScale]:FOR[Knes] // Airbrake for Hermes Space Shuttle
+@PART[Knes_Cargo_Pod_09375]:NEEDS[TweakScale]:FOR[Knes] // Cargo Pod "Minotaur"
 {
 	%MODULE[TweakScale]
 	{
-		type = free_square
-	}
-}
-
-@PART[Knes_Hermes_AileronC]:NEEDS[TweakScale]:FOR[Knes] // Hermes Aileron C
-{
-	%MODULE[TweakScale]
-	{
-		type = free_square
-	}
-}
-
-@PART[Knes_Hermes_AileronL]:NEEDS[TweakScale]:FOR[Knes] // Hermes Aileron Right
-{
-	%MODULE[TweakScale]
-	{
-		type = free_square
-	}
-}
-
-@PART[Knes_Hermes_AileronR]:NEEDS[TweakScale]:FOR[Knes] // Hermes Aileron Left
-{
-	%MODULE[TweakScale]
-	{
-		type = free_square
-	}
-}
-
-@PART[Knes_Hermes_RudderL]:NEEDS[TweakScale]:FOR[Knes] // Hermes Rudder Left
-{
-	%MODULE[TweakScale]
-	{
-		type = free_square
-	}
-}
-
-@PART[Knes_Hermes_RudderR]:NEEDS[TweakScale]:FOR[Knes] // Hermes Rudder Right
-{
-	%MODULE[TweakScale]
-	{
-		type = free_square
-	}
-}
-
-@PART[_Knes_French_Hermes_Elevon]:NEEDS[TweakScale]:FOR[Knes] // Callisto Space Shuttle Elevon
-{
-	%MODULE[TweakScale]
-	{
-		type = free_square
-	}
-}
-
-@PART[_Knes_French_Hermes_Rudder]:NEEDS[TweakScale]:FOR[Knes] // Callisto Space Shuttle Rudder
-{
-	%MODULE[TweakScale]
-	{
-		type = free_square
-	}
-}
-
-@PART[_Knes_French_Hermes_Wings]:NEEDS[TweakScale]:FOR[Knes] // Callisto Space Shuttle Wings
-{
-	%MODULE[TweakScale]
-	{
-		type = free_square
-	}
-}
-
-
-// ** Coupling **
-
-@PART[Knes_Hera_Grapple]:NEEDS[TweakScale]:FOR[Knes] // Hera Grapple Robotic Arm
-{
-	%MODULE[TweakScale]
-	{
-		type = stack
+		type = stack_square
 		defaultScale = 1.25
 	}
 }
 
-@PART[_Knes_French_Hermes_Adapter_s1875]:NEEDS[TweakScale]:FOR[Knes] // Callisto Adapter for 1.875 Rocket
-{
-	#@TWEAKSCALEBEHAVIOR[Decoupler]/MODULE[TweakScale] { }
-	%MODULE[TweakScale]
-	{
-		type = stack
-		defaultScale = 1.875
-	}
-}
 
+// ** Control **
 
-// ** Engine **
-
-@PART[_French_Hermes_OME_Engine]:NEEDS[TweakScale]:FOR[Knes] // Callisto "OME" Monoprop Engine
+@PART[_Knes_Control_LowProfile_RCS_0625]:NEEDS[TweakScale]:FOR[Knes] // RCS "Hachimaki" Control Unit
 {
 	#@TWEAKSCALEBEHAVIOR[Engine]/MODULE[TweakScale] { }
 	%MODULE[TweakScale]
@@ -124,10 +39,23 @@
 }
 
 
-// ** Ground **
+// ** Coupling **
 
-@PART[Knes_Hermes_Gear]:NEEDS[TweakScale]:FOR[Knes] // LH-35 Hermes Landing Gear
+@PART[Knes_DockingPortJr_0625]:NEEDS[TweakScale]:FOR[Knes] // K06 "Arcas" Docking Port Jr
 {
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 0.625
+	}
+}
+
+
+// ** Engine **
+
+@PART[Knes_MonoProp_Engine_srf]:NEEDS[TweakScale]:FOR[Knes] // Monoprop Engine "Youri"
+{
+	#@TWEAKSCALEBEHAVIOR[Engine]/MODULE[TweakScale] { }
 	%MODULE[TweakScale]
 	{
 		type = free
@@ -135,13 +63,31 @@
 }
 
 
+// ** FuelTank **
+
+@PART[Knes_MonoProp_FuelTank_Medium_09375]:NEEDS[TweakScale]:FOR[Knes] // CL-R15 RCS Fuel Tank
+{
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 0.9375
+	}
+}
+
+@PART[Knes_MonoProp_FuelTank_Nano_09375]:NEEDS[TweakScale]:FOR[Knes] // CL-R10 RCS Fuel Tank
+{
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 0.9375
+	}
+}
+
+
 // ** Pods **
 
-@PART[Knes_Hermes]:NEEDS[TweakScale]:FOR[Knes] // Hermes Space Shuttle
+@PART[Knes_Crew_Pod_09375]:NEEDS[TweakScale]:FOR[Knes] // Command Pod "Viking"
 {
-	// It's a crew cabin, an engine and a decoupler
-	#@TWEAKSCALEBEHAVIOR[ModuleGeneratorExtended]/MODULE[TweakScale] { }
-	#@TWEAKSCALEBEHAVIOR[Engine]/MODULE[TweakScale] { }
 	%MODULE[TweakScale]
 	{
 		type = stack_square
@@ -149,12 +95,34 @@
 	}
 }
 
-@PART[_Knes_French_Hermes]:NEEDS[TweakScale]:FOR[Knes] // Callisto Space Shuttle
+
+// ** Propulsion **
+
+@PART[Knes_Service_Module_Viking_09375]:NEEDS[TweakScale]:FOR[Knes] // C-09 "Viking" Service Module
 {
-	// It's also a crew cabin, an engine, a generator and a decoupler!
-	#@TWEAKSCALEBEHAVIOR[ModuleGeneratorExtended]/MODULE[TweakScale] { }
-	#@TWEAKSCALEBEHAVIOR[Decoupler]/MODULE[TweakScale] { }
 	#@TWEAKSCALEBEHAVIOR[Engine]/MODULE[TweakScale] { }
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 0.9375
+	}
+}
+
+@PART[_Knes_Utility_Adapter_09375_0625]:NEEDS[TweakScale]:FOR[Knes] // L-07 "Racoon" Service Module
+{
+	#@TWEAKSCALEBEHAVIOR[Engine]/MODULE[TweakScale] { }
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 2.5
+	}
+}
+
+
+// ** Science **
+
+@PART[_Knes_Station_Module_ScienceLab]:NEEDS[TweakScale]:FOR[Knes] // Science Module "Busy"
+{
 	%MODULE[TweakScale]
 	{
 		type = stack_square
@@ -165,50 +133,123 @@
 
 // ** Structural **
 
-@PART[_Knes_French_Hermes_Structural_Dock]:NEEDS[TweakScale]:FOR[Knes] // Callisto Structural Dock
+@PART[_Knes_Station_Module_EndCap_0625]:NEEDS[TweakScale]:FOR[Knes] // Adapter K-0625 "Inori"
 {
 	%MODULE[TweakScale]
 	{
 		type = stack
-		defaultScale = 1.25
+		defaultScale = 2.5
 	}
 }
 
-@PART[_Knes_French_Hermes_Structural_Platform]:NEEDS[TweakScale]:FOR[Knes] // Callisto Structural Platform
+@PART[_Knes_Station_Module_EndCap_09375]:NEEDS[TweakScale]:FOR[Knes] // Adapter K-09375 "Betsy"
 {
 	%MODULE[TweakScale]
 	{
 		type = stack
-		defaultScale = 1.25
+		defaultScale = 2.5
 	}
 }
 
-@PART[_Knes_Hermes_Adapter]:NEEDS[TweakScale]:FOR[Knes] // Hermes Adapter
+@PART[_Knes_Station_Module_EndCap_Small_0625]:NEEDS[TweakScale]:FOR[Knes] // Adapter KB-0625 "Maia"
 {
-	#@TWEAKSCALEBEHAVIOR[Decoupler]/MODULE[TweakScale] { }
 	%MODULE[TweakScale]
 	{
 		type = stack
-		defaultScale = 1.875
+		defaultScale = 0.625
+	}
+}
+
+@PART[_Knes_Structural_Adapter_09375_0625]:NEEDS[TweakScale]:FOR[Knes] // Adapter 0.625 0.9375 "Zoe"
+{
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 2.5
+	}
+}
+
+@PART[_Knes_Structural_Adapter_125_09375]:NEEDS[TweakScale]:FOR[Knes] // Adapter K-0125 "Caroline"
+{
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 2.5
+	}
+}
+
+@PART[_Knes_Structural_EndCap_0625]:NEEDS[TweakScale]:FOR[Knes] // K0625 "Pingu" EndCap
+{
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 0.625
+	}
+}
+
+@PART[_Knes_Structural_Node_0625]:NEEDS[TweakScale]:FOR[Knes] // K0625 "Together" Node
+{
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 0.625
+	}
+}
+
+@PART[_Knes_Structural_Short_Adapter_09375_0625]:NEEDS[TweakScale]:FOR[Knes] // Adapter Flat 0.625 0.9375 "Chloé"
+{
+	%MODULE[TweakScale]
+	{
+		type = ?
+		defaultScale = 0.9375
+	}
+}
+
+
+// ** Thermal **
+
+@PART[Knes_Heatshield_09375]:NEEDS[TweakScale]:FOR[Knes] // Heatshield "Turtle"
+{
+	%MODULE[TweakScale]
+	{
+		type = stack_square
+		defaultScale = 0.9375
 	}
 }
 
 
 // ** Utility **
 
-@PART[Knes_Hermes_HRM]:NEEDS[TweakScale]:FOR[Knes] // Hermes HRM
+@PART[Knes_EscapeTower_Small]:NEEDS[TweakScale]:FOR[Knes] // Launch Escape System "LastChance"
 {
-	// This is an engine and a decoupler!
-	#@TWEAKSCALEBEHAVIOR[Decoupler]/MODULE[TweakScale] { }
-	#@TWEAKSCALEBEHAVIOR[Engine]/MODULE[TweakScale] { }
+	#@TWEAKSCALEBEHAVIOR[SRB]/MODULE[TweakScale] { }
 	%MODULE[TweakScale]
 	{
-		type = stack_square
-		defaultScale = 3.75
+		type = stack
+		defaultScale = 1.25
 	}
 }
 
-@PART[_Knes_French_Hermes_Crew_Module]:NEEDS[TweakScale]:FOR[Knes] // Callisto Crew Module
+@PART[Knes_Parachute_Inline_0625]:NEEDS[TweakScale]:FOR[Knes] // Inline Parachute "Uncertain"
+{
+	%MODULE[TweakScale]
+	{
+		type = stack_square
+		defaultScale = 0.625
+	}
+}
+
+@PART[_Knes_Station_Module_CrystalFactory]:NEEDS[TweakScale]:FOR[Knes] // Crystallisation Facility Module "Eternity"
+{
+	#@TWEAKSCALEBEHAVIOR[ModuleGeneratorExtended]/MODULE[TweakScale] { }
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 1.25
+	}
+}
+
+@PART[_Knes_Station_Module_Hab]:NEEDS[TweakScale]:FOR[Knes] // Habitation Module "Homelike"
 {
 	%MODULE[TweakScale]
 	{
@@ -216,20 +257,3 @@
 		defaultScale = 1.25
 	}
 }
-
-@PART[_Knes_French_Hermes_Docking_Module]:NEEDS[TweakScale]:FOR[Knes] // Callisto Docking Module
-{
-	#@TWEAKSCALEBEHAVIOR[Decoupler]/MODULE[TweakScale] { }
-	%MODULE[TweakScale]
-	{
-		type = stack_square     // It have crew!
-		defaultScale = 1.25
-	}
-}
-
-
-
-
-
-
-
