--- a/GameData/Knes/Localization/Knes_fr-fr.cfg
+++ b/GameData/Knes/Localization/Knes_fr-fr.cfg
@@ -3,8 +3,10 @@ Localization
     fr-fr
     {
         #autoLOC_Knes_manufacturer = Knes
+		
         // --- \Parts ---
         // --- \Parts\ATV ---
+		
         #autoLOC_Knes_ATV_Adapter_title = Module de guidage ATV "Lemaitre"
         #autoLOC_Knes_ATV_Adapter_description = Un adaptateur modulaire pour l'ATV. Ce Module de guidage offre une technologie avancée d’assistance au guidage et est équipé de roues à réaction internes et de batteries de taille décente. Malgré les craintes qu’un jour, les noyaux de vaisseaux spatiaux autonomes puissent devenir conscients de soi et se retourner contre leurs créateurs, ou même devenir très têtu contre l’ouverture des portes de la baie de pod, le Knes insiste sur le fait que ces dispositifs sans pilote pilotés par l’IA sont la voie de l’avenir.
         #autoLOC_Knes_ATV_Adapter_tags = ATV Knes commande pilotage
@@ -80,8 +82,10 @@ Localization
         #autoLOC_Knes_STEAM_ScienceLab_6 = Vérifier les échantillons de couleur
         #autoLOC_Knes_STEAM_ScienceLab_7 = Supprimer les données
         #autoLOC_Knes_STEAM_ScienceLab_8 = Collecter les données
+		
         // --- \Parts\Core ---
         // --- \Parts\Core\Adapters ---
+		
         #autoLOC_Knes_MultiPayload_Adapter_Sylda_AR5_375_title = Adaptateur de charge utile double K-375 "Kylda"
         #autoLOC_Knes_MultiPayload_Adapter_Sylda_AR5_375_description = Un adaptateur pour charge utile.
         #autoLOC_Knes_MultiPayload_Adapter_Sylda_AR5_375_tags = knes )cap cone nose Ariane knes break decoupleur separation split stag dual adapteur
@@ -103,13 +107,17 @@ Localization
         #autoLOC_Knes_Utility_SafeSystem_250_title = Systéme de sauvetage 1.875 à 1.25
         #autoLOC_Knes_Utility_SafeSystem_250_description = Sauvez votre équipage avec ce nouveau Systéme de sauvetage ! C'est également un bon adaptateur d'1.875m à 1.25m.
         #autoLOC_Knes_Utility_SafeSystem_250_tags = Knes cone sauvetage
+		
         // --- \Parts\Core\Antenna ---
+		
         #autoLOC_Knes_DirectAntenna_bread_title = Antenne C-2501 "Wall-e"
         #autoLOC_Knes_DirectAntenna_bread_description = Une antenne puissante pour votre vaisseau spatial
         #autoLOC_Knes_DirectAntenna_bread_tags = Knes aerial antenne radio signal transmi srf
         #autoLOC_Knes_DirectAntenna_bread_0 = Blanc
         #autoLOC_Knes_DirectAntenna_bread_1 = Noir
+		
         // --- \Parts\Core\Decouplers ---
+		
         #autoLOC_Knes_Decoupler_G0625_title = Découpleur G0625
         #autoLOC_Knes_Decoupler_G0625_description = Le Découpleur G0625 est un utilitaire de détachement miniature pour les petites fusées et sondes spatiales.
         #autoLOC_Knes_Decoupler_G0625_tags = knes break découplage séparateur split stag
@@ -155,8 +163,10 @@ Localization
         #autoLOC_Knes_Decoupler_Radial_Small_tags = knes Diomede Diamant break découplage split stag radial
         #autoLOC_Knes_Decoupler_Radial_Small_0 = Doré
         #autoLOC_Knes_Decoupler_Radial_Small_1 = Blanc
+		
         // --- \Parts\Core\EndCap ---
         // --- \Parts\Core\Fairings ---
+		
         #autoLOC_Knes_Aero_Fairing_09375_title = Coiffe aérodynamique KF 0.9375m
         #autoLOC_Knes_Aero_Fairing_125_title = Coiffe aérodynamique KF 1.25m
         #autoLOC_Knes_Aero_Fairing_1875_title = Coiffe aérodynamique KF 1.875m
@@ -165,7 +175,9 @@ Localization
         #autoLOC_Knes_Aero_Fairing_375_title = Coiffe aérodynamique KF 3.75m
         #autoLOC_Knes_Aero_Fairing_375_description = Les ingénieurs de Snekma ont rapidement réalisé que la protection des pièces lors de l’ascension était importante. De lourdes recherches sur la construction procédurale bidimensionnelle ont ensuite été financées dans l’espoir de fabriquer des coiffes protectrices pour les charges utiles.
         #autoLOC_Knes_Aero_Fairing_375_tags = knes aero )cap cargo cone contain drag fairing hollow inter nose payload protect rocket shroud stage (stor transport Ariane
+		
         // --- \Parts\Core\Parachute ---
+		
         #autoLOC_Knes_Mainchute_sr_title = Parachute KS-1 "Vega"
         #autoLOC_Knes_Mainchute_sr_description = Le parachute "Vega" pourrait être considéré par certains comme une meilleure alternative à la chute libre.
         #autoLOC_Knes_Mainchute_sr_tags = Knes chute parachute srf stack
@@ -184,7 +196,9 @@ Localization
         #autoLOC_Knes_Paraglider_Steerable_sr_2 = Tester le parapente
         #autoLOC_Knes_Paraglider_Steerable_sr_3 = Blanc
         #autoLOC_Knes_Paraglider_Steerable_sr_4 = Noir
+		
         // --- \Parts\Core\Sat ---
+		
         #autoLOC_Knes_Flat_SolarPanel_NanoSat_title = Panneaux photovoltaïques K2 "Crevette"
         #autoLOC_Knes_Flat_SolarPanel_NanoSat_description = Les Panneaux photovoltaïques K2 "Crevette" sont le dernier développement du Knes en miniaturisation de panneaux solaires. Un assez bon travail.
         #autoLOC_Knes_Flat_SolarPanel_NanoSat_tags = knes solaire charge e/c elect energie fixed plat generat (light photo power solar static sun volt watt
@@ -203,8 +217,10 @@ Localization
         #autoLOC_Knes_Sat_Starlette_0 = Analyse Géodesique
         #autoLOC_Knes_Sat_Starlette_1 = Supprimer les données
         #autoLOC_Knes_Sat_Starlette_2 = Prendre les données
+		
         // --- \Parts\Launcher ---
         // --- \Parts\Launcher\Ariane5 ---
+		
         #autoLOC_Knes_Aero_NoseCone_A_title = Coiffe d'EAP pour Ariane 5
         #autoLOC_Knes_Aero_NoseCone_A_description = La forme inclinée est parfaite pour éloigner la pression aérodynamique du corps de la fusée.
         #autoLOC_Knes_Aero_NoseCone_A_tags = knes aero aircraft booster )cap drag fligh plane rocket stab stream tail
@@ -246,7 +262,9 @@ Localization
         #autoLOC_Knes_Structural_Struts_title = Étai de connexion Ariane
         #autoLOC_Knes_Structural_Struts_description = L'étai de connexion est tenu en haute estime par de nombreux ingénieurs aérospatiaux de par sa capacité à rendre les vaisseaux plus stables. Une fois les deux côtés connectés, une poutrelle structurelle relie les deux extrémités, permettant des constructions plus solides (et plus lourdes).
         #autoLOC_Knes_Structural_Struts_tags = knes bind connect join line moar (more pin rigid shake strength strong stru support tie wobble
+		
         // --- \Parts\Launcher\Diamant ---
+		
         #autoLOC_Knes_Booster_P03_title = Propulseur à ergol solide P-03 "Hector"
         #autoLOC_Knes_Booster_P03_description = Un petit bidon rempli de ce qui semble être du combustible solide de fusée.
         #autoLOC_Knes_Booster_P03_tags = Diamant Knes booster srf Diomede
@@ -391,7 +409,9 @@ Localization
         #autoLOC_Knes_Vega_Avum_Avionics_125_title = Module de guidage S3 "Avroom"
         #autoLOC_Knes_Vega_Avum_Avionics_125_description = Le Module de guidage S3 "Avroom" offre une technologie avancée d’assistance au guidage et est équipé de roues à réaction internes, de Carburant et de batteries de taille décente. Gardez le contrôle de votre fusée, comme une fusée télécommandée?.
         #autoLOC_Knes_Vega_Avum_Avionics_125_tags = Knes probe reaction wheels avionic control 1.25 Vega avum LFO
+		
         // --- \Parts\Launcher\L3S ---
+		
         #autoLOC_Knes_Command_Minus_title = Module de guidage "Hermine"
         #autoLOC_Knes_Command_Minus_description = Contient assez de couple pour contrôler les petites fusées, et les batteries pour les garder en marche.
         #autoLOC_Knes_Command_Minus_tags = 1.875m probe control instrument unit knes Minus L3S Ariane
@@ -511,7 +531,9 @@ Localization
         #autoLOC_Knes_RCS_3way_title = Bloc de propulsion RCS Mk-61 "Zorg"
         #autoLOC_Knes_RCS_3way_description = Grappe de micropropulseurs très utiles pour les manœuvres d'arrimage
         #autoLOC_Knes_RCS_3way_tags = Diamant Knes booster srf Diomede L3S Ariane RCS
+		
         // --- \Parts\Launcher\Veronique ---
+		
         #autoLOC_Knes_Veronique_Aileron_title = Ailette AGI-F "Nageoire"
         #autoLOC_Knes_Veronique_Aileron_description = Petite Ailette pour la fusée Varinka
         #autoLOC_Knes_Veronique_Aileron_tags = Veronique Knes Varinka fin
@@ -524,7 +546,9 @@ Localization
         #autoLOC_Knes_Veronique_FuelTank_03125_title = Réservoir de carburant AGI-FT "Espoir"
         #autoLOC_Knes_Veronique_FuelTank_03125_description = Un réservoir de carburant de 0,3125m pour la fusée Varinka.
         #autoLOC_Knes_Veronique_FuelTank_03125_tags = Knes Fuel Veronique Varinka 0.3125
+		
         // --- \Parts\Launcher\Vesta ---
+		
         #autoLOC_Knes_Vesta_Adapter_0625to03125_title = Adaptateur LRBA-V "Ecureuil"
         #autoLOC_Knes_Vesta_Adapter_0625to03125_description = Un bel adaptateur 0.625m à 0.3125m pour la fusée Viska.
         #autoLOC_Knes_Vesta_Adapter_0625to03125_tags = Vesta Viska Knes
@@ -557,8 +581,10 @@ Localization
         #autoLOC_Knes_Vesta_Parachute_03125_title = Parachute LRBA-C "Ailes de Dragon"
         #autoLOC_Knes_Vesta_Parachute_03125_description = Ce parachute a été largement accepté comme une meilleure alternative à la chute libre.
         #autoLOC_Knes_Vesta_Parachute_03125_tags = Vesta Viska Veronique Varinka Knes
+		
         // --- \Parts\Launcher\Vulcain ---
-        #autoLOC_Knes_Carmen_FuelTank_125_title = Réservoir de carburant MLF-12 "Calypso"
+		
+        #autoLOC_Knes_Carmen_FuelTank_125_title = Réservoir de carburant MLF-12 "Triton"
         #autoLOC_Knes_Carmen_FuelTank_125_description = Là où nous allons, nous n’avons pas besoin de peinture. Ce réservoir de carburant manque de décoration, mais il est certain de plaire aux clients.
         #autoLOC_Knes_Carmen_FuelTank_125_tags = 1.25 Knes Carissa
         #autoLOC_Knes_Carmen_FuelTank_Extended_125_title = Réservoir de carburant MLF-24 "Carissa"
@@ -603,8 +629,10 @@ Localization
         #autoLOC_Knes_Mireille_LFO_short_09375_title = Réservoir de carburant M-09 "Cassis"
         #autoLOC_Knes_Mireille_LFO_short_09375_description = Là où nous allons, nous n’avons pas besoin de peinture. Ce réservoir de carburant manque de décoration, mais il est certain de plaire aux clients.
         #autoLOC_Knes_Mireille_LFO_short_09375_tags = 1.25 Knes
+		
         // --- \Parts\LiftingsBodies ---
         // --- \Parts\LiftingsBodies\StarRider ---
+		
         #autoLOC_Knes_IXV_Elevon_title = IXV Elevon
         #autoLOC_Knes_IXV_Elevon_description = Élevon de contrôle "Patin"
         #autoLOC_Knes_IXV_Elevon_tags = IXV Patin elevon knes
@@ -622,16 +650,20 @@ Localization
         #autoLOC_Knes_Skid_0 = Déployer
         #autoLOC_Knes_Skid_1 = Retracter
         #autoLOC_Knes_Skid_2 = Tester Patin
+		
         // --- \Parts\LiftingsBodies\StarWatcher ---
-        #autoLOC_Knes_Pod_StarWatcher_title = K-CEV "StarWatcher"
-        #autoLOC_Knes_Pod_StarWatcher_description = Spécifiquement étudié pour l'évacuation d'une station spatiale en cas d'urgence. Le K-CEV "StarWatcher" est finalement devenu le véhicule de rotation d'équipage idéal.
+		
+        #autoLOC_Knes_Pod_StarWatcher_title = K-CRV "StarWatcher"
+        #autoLOC_Knes_Pod_StarWatcher_description = La logistique spatiale est compliquée. Et les voyages dans l’espace sont dangereux. Il y a des urgences. Des astronautes meurent. Le K-CRV "StarWatcher" a été conçu pour atténuer les défis logistiques des voyages dans l’espace et, espérons-le, éviter les catastrophes. Spécifiquement étudié pour l'évacuation d'une station spatiale en cas d'urgence. Le K-CEV "StarWatcher" est finalement devenu un véhicule de rotation d'équipage idéal.
         #autoLOC_Knes_Pod_StarWatcher_tags = command pod knes K-IXV control fly pilot plane space StarWatcher
         #autoLOC_Knes_Pod_StarWatcher_0 = Rapport d’équipage
         #autoLOC_Knes_Pod_StarWatcher_1 = Supprimer le rapport d’équipage
         #autoLOC_Knes_Pod_StarWatcher_2 = Revoir le rapport
         #autoLOC_Knes_Pod_StarWatcher_3 = Revoir les données
         #autoLOC_Knes_Pod_StarWatcher_4 = Conserver les données
+		
         // --- \Parts\MultiRoleKapsule ---
+		
         #autoLOC_Knes_Hermes_Antenna_title = Antenne MRK-5b
         #autoLOC_Knes_Hermes_Antenna_description = Une jolie petite antenne relais.
         #autoLOC_Knes_Hermes_Antenna_tags = aerial antenna radio signal transmi MRK Hermes Knes
@@ -714,8 +746,10 @@ Localization
         #autoLOC_Knes_mrk_Thruster_title = Propulseur à monergol MRK-6f
         #autoLOC_Knes_mrk_Thruster_description = Deux de ces petits propulseurs sont rangés dans le module de service du MRK pour permettre des manœuvres d’amarrage de précision sous le contrôle de l’équipage.
         #autoLOC_Knes_mrk_Thruster_tags = cluster control dock maneuver manoeuvre react rendezvous rotate stab steer translate MRK Knes
+		
         // --- \Parts\MultiRoleKapsule\Assets ---
         // --- \Parts\Spacecraft ---
+		
         #autoLOC_Knes_Cargo_Pod_09375_title = Capsule de commande Cargo "Minotaure"
         #autoLOC_Knes_Cargo_Pod_09375_description = Capsule cargo pour un retour balistique de votre charge utile.
         #autoLOC_Knes_Cargo_Pod_09375_tags = knes test cargo minotaur capsule Kis
@@ -834,8 +868,10 @@ Localization
         #autoLOC_Knes_Utility_Adapter_09375_0625_tags = knes )cap cone nose Adapter 
         #autoLOC_Knes_Utility_Adapter_09375_0625_0 = Blanc
         #autoLOC_Knes_Utility_Adapter_09375_0625_1 = Noir
+		
         // --- \Parts\SpacePlane ---
         // --- \Parts\SpacePlane\EuropeanHermes ---
+		
         #autoLOC_Knes_Airbrake_title = Aérofrein HK-1
         #autoLOC_Knes_Airbrake_tags = (air airbrake aircraft brake dive drag fligh landing plane slow speed spoil Knes Hermes
         #autoLOC_Knes_Hera_Grapple_title = Dispositif de saisie "Hera"
@@ -872,7 +908,9 @@ Localization
         #autoLOC_Knes_Hermes_RudderR_title = Hermes Empennage Droit d'Hermes
         #autoLOC_Knes_Hermes_RudderR_description = Empennage pour la navette spatiale Hermes
         #autoLOC_Knes_Hermes_RudderR_tags = Hermes elevon knes
+		
         // --- \Parts\SpacePlane\FrenchHermes ---
+		
         #autoLOC_Knes_French_Hermes_title = Navette spatiale "Callisto"
         #autoLOC_Knes_French_Hermes_description = Callisto est une navette réutilisable pour transporter des Kerbals et des cargaisons de taille moyenne en orbite basse de Kerbin.
         #autoLOC_Knes_French_Hermes_tags = Hermes Callisto knes french shuttle old
@@ -921,7 +959,9 @@ Localization
         #autoLOC_Knes_French_Hermes_Wings_3 = BlancEtNoir
         #autoLOC_Knes_French_Hermes_Wings_4 = LKS_NoirEtBlanc
         #autoLOC_Knes_French_Hermes_Wings_5 = LKS_BlancEtNoir
+		
         // --- \Resources ---
+		
         #autoLOC_Knes_ResourcesGeneric_Crystal = Cristal
         #autoLOC_Knes_physics_materials_Friction = Aucun frottement
         #autoLOC_Knes_ScuebceDefs_ColorSamples = Echantillons de couleur
@@ -1084,7 +1124,9 @@ Localization
         #autoLOC_Knes_ScuebceDefs_Telemetry_14 = Regardons la télémétrie de l’environnement.
         #autoLOC_Knes_ScuebceDefs_Geodesy = Géodésie
         #autoLOC_Knes_ScuebceDefs_Geodesy_1 = Données géodésiques recueillies.
+		
         // --- \Strategies ---
+		
         #autoLOC_Knes_Strategies_CrystalGift = Cadeau en Cristal
         #autoLOC_Knes_Strategies_CrystalGift_desc = Nous savons combien nos concitoyens aiment les cristaux, et nous pourrions certainement améliorer notre image en les offrant à tous les visiteurs du centre spatial. Il y a bien sûr un coût, mais c’est faisable.
         #autoLOC_Knes_Strategies_CrystalShops = Boutique de Cristaux
