--- a/GameData/Knes/Spaces/ATV_IVA/ATV_IVA.cfg
+++ b/GameData/Knes/Spaces/ATV_IVA/ATV_IVA.cfg
@@ -94,4 +94,53 @@ INTERNAL
 		rotation = 0,-0.7071068,0.7071068,0
 		scale = 2.000002,2.000001,2.000001
 	}
+	PROP
+	{
+		name = knes_prop_box_1
+		position = 0.9486,-0.1252,-0.618
+		rotation = 0,0,0.7071068,0.7071068
+		scale = 1.200001,1.200001,1.2
+	}
+	PROP
+	{
+		name = knes_prop_box_2
+		position = 0.9486,0.13,-0.615
+		rotation = 0,0,0.7071068,0.7071068
+		scale = 1.2,1.2,1.2
+	}
+	PROP
+	{
+		name = knes_prop_box_2
+		position = 0.9486,0.38,0.654
+		rotation = 0,0,0.7071068,0.7071068
+		scale = 1.2,1.2,1.2
+	}
+	PROP
+	{
+		name = knes_prop_box_2
+		position = -0.948,0.374,0.219
+		rotation = 0,0,-0.7071068,0.7071068
+		scale = 1.2,1.2,1.2
+	}
+	PROP
+	{
+		name = knes_prop_instrument_guitar_1
+		position = -0.86,-0.642,-0.727
+		rotation = -0.2592489,-0.6325459,-0.6176809,0.3887751
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = knes_prop_instrument_synth_1
+		position = -0.378,-0.877,-0.42
+		rotation = 0.01444463,-0.6869994,-0.7264945,0.005395214
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = knes_prop_medical_box_1
+		position = -0.945,-0.373,0.109
+		rotation = -0.5,-0.5,-0.5,0.5
+		scale = 0.7658578,0.7658579,0.7658579
+	}
 }
