--- a/GameData/Knes/Spaces/ATV_IVA/STEAM_CrystalLab_IVA.cfg
+++ b/GameData/Knes/Spaces/ATV_IVA/STEAM_CrystalLab_IVA.cfg
@@ -257,7 +257,7 @@ INTERNAL
 	{
 		name = Knes_Props_snacks_open
 		position = -0.5811,-0.576,1.805
-		rotation = -0.4193093,-0.5693678,0.5693678,-0.4193092
+		rotation = -0.4193093,-0.5693679,0.5693679,-0.4193092
 		scale = 1,1,1
 	}
 	PROP
@@ -273,5 +273,19 @@ INTERNAL
 		position = 0.247,-0.912,1.792
 		rotation = 0.4725111,0.5260544,-0.5260543,0.4725112
 		scale = 1,1,1
+	}
+	PROP
+	{
+		name = knes_prop_box_1
+		position = -0.956,-0.136,0.635
+		rotation = 0,0,-0.7071068,0.7071068
+		scale = 1.2,1.2,1.25
+	}
+	PROP
+	{
+		name = knes_prop_medical_box_1
+		position = -0.956,0.385,0.527
+		rotation = 0.5,0.5,0.5,-0.5
+		scale = 0.88,0.88,0.88
 	}
 }
