--- a/GameData/Knes/Spaces/Station_Module_Hab_IVA/Station_Module_Hab_IVA.cfg
+++ b/GameData/Knes/Spaces/Station_Module_Hab_IVA/Station_Module_Hab_IVA.cfg
@@ -123,4 +123,18 @@ INTERNAL
 		rotation = 0.4320734,-0.5597433,0.5597433,0.4320734
 		scale = 1,1,1
 	}
+	PROP
+	{
+		name = knes_prop_instrument_synth_1
+		position = 0.479,-0.137,0.498
+		rotation = 0,0.7071068,0,0.7071068
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = knes_prop_instrument_guitar_1
+		position = -0.32,-0.219,0.678
+		rotation = -0.5946536,-0.2736613,-0.1573048,0.7394267
+		scale = 1,1,1
+	}
 }
