--- a/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes_Crew_Module.cfg
+++ b/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes_Crew_Module.cfg
@@ -119,13 +119,38 @@ PART
 	}	
 	MODULE
 	{
+		name = ModuleScienceExperiment
+		experimentID = crewReport
+		experimentActionName = #autoLOC_502009 //#autoLOC_502009 = Crew Report
+		resetActionName = #autoLOC_502010 //#autoLOC_502010 = Discard Crew Report
+		reviewActionName = #autoLOC_502200 //#autoLOC_502200 = Review Report
+		useStaging = False
+		useActionGroups = True
+		hideUIwhenUnavailable = True
+		rerunnable = True
+		xmitDataScalar = 1.0
+		usageReqMaskInternal = 5
+		usageReqMaskExternal = -1
+	}	
+	MODULE
+	{
+		name = ModuleDataTransmitter
+		antennaType = INTERNAL
+		packetInterval = 1.0
+		packetSize = 2
+		packetResourceCost = 12.0
+		requiredResource = ElectricCharge
+		antennaPower = 5000
+		optimumRange = 2500
+		packetFloor = .1
+		packetCeiling = 5
+	}	
+	MODULE
+	{
 		name = ModuleScienceContainer
-		
 		reviewActionName = #autoLOC_502201 //#autoLOC_502201 = Review Stored Data
 		storeActionName = #autoLOC_502202 //#autoLOC_502202 = Store Experiments
-		evaOnlyStorage = True // i.e. can nearby regular vessels also do this, or EVA only
-		storageRange = 3
-		canBeTransferredToInVessel = True
-		canTransferInVessel = True
+		evaOnlyStorage = True
+		storageRange = 4.0
 	}	
 }
