--- a/GameData/Knes/Spaces/ATV_IVA/STEAM_CrystalLab_IVA.cfg
+++ b/GameData/Knes/Spaces/ATV_IVA/STEAM_CrystalLab_IVA.cfg
@@ -150,13 +150,6 @@ INTERNAL
 	}
 	PROP
 	{
-		name = Knes_Monitor_SideMount
-		position = -0.9,-0.196,-1.487
-		rotation = 0,-0.7071068,0,0.7071068
-		scale = 2.200001,2.2,2.200001
-	}
-	PROP
-	{
 		name = Knes_Monitor
 		position = -0.943,0.636,-1.404
 		rotation = 0,-0.7071068,0,0.7071068
@@ -287,5 +280,61 @@ INTERNAL
 		position = -0.956,0.385,0.527
 		rotation = 0.5,0.5,0.5,-0.5
 		scale = 0.88,0.88,0.88
+	}
+	PROP
+	{
+		name = knes_prop_tool_panel_1
+		position = 0.787,-0.578,-1.902
+		rotation = 0,-0.7071068,-0.7071068,0
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = Knes_Monitor_SideMount
+		position = -0.918,-0.632,-1.561
+		rotation = 0,-0.7071068,0,0.7071068
+		scale = 1.280857,1.280856,1.280857
+	}
+	PROP
+	{
+		name = Knes_Monitor_SideMount
+		position = -0.918,-0.632,-1.386
+		rotation = 0,-0.7071068,0,0.7071068
+		scale = 1.28086,1.28086,1.28086
+	}
+	PROP
+	{
+		name = knes_prop_box_2
+		position = -0.62,-0.945,-0.167
+		rotation = 0,0,0,1
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = knes_prop_box_2
+		position = -0.62,-0.945,0.233
+		rotation = 0,0,0,1
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = knes_prop_box_2
+		position = 0.636,-0.945,-1.473
+		rotation = 0,0,0,1
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = knes_prop_box_2
+		position = 0.634,-0.945,-1.037
+		rotation = 0,-0.1304656,0,0.9914529
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = knes_prop_monitor_1_image_1
+		position = 0.635,0.83,1.762
+		rotation = 0,-0.7071068,0.7071068,0
+		scale = 1,1,1
 	}
 }
