--- a/GameData/Knes/Spaces/ATV_IVA/STEAM_Hatch_IVA.cfg
+++ b/GameData/Knes/Spaces/ATV_IVA/STEAM_Hatch_IVA.cfg
@@ -52,4 +52,11 @@ INTERNAL
 		rotation = 0,0,0.7071068,0.7071068
 		scale = 1.5,1.5,1.5
 	}
+	PROP
+	{
+		name = knes_prop_tool_panel_1
+		position = 0.423,-0.423,-0.429
+		rotation = -0.2705981,0.6532815,0.2705981,0.6532815
+		scale = 1,1,1
+	}
 }
